@@ -355,10 +355,9 @@ function(x, ...)
 function(dir = NULL, files = NULL, encoding = "unknown", db_file = NULL,
          stages = c("build", "install"), os = .OStype(), step = 3L, built_file = NULL)
 {
-    macros <- file.path(R.home("share"), "Rd", "macros", "system.Rd")
     if(!is.null(dir)) {
         dir <- file_path_as_absolute(dir)
-        macros <- loadPkgRdMacros(dir, macros)
+        macros <- loadPkgRdMacros(dir)
         man_dir <- file.path(dir, "man")
         if(!dir.exists(man_dir))
             return(structure(list(), names = character()))
@@ -366,7 +365,9 @@ function(dir = NULL, files = NULL, encoding = "unknown", db_file = NULL,
             files <- list_files_with_type(man_dir, "docs", OS_subdirs=os)
         encoding <- .get_package_metadata(dir, FALSE)["Encoding"]
         if(is.na(encoding)) encoding <- "unknown"
-    } else if(is.null(files))
+    } else if(!is.null(files))
+        macros <- initialRdMacros()
+    else
         stop("you must specify 'dir' or 'files'")
 
     .fetch_Rd_object <- function(f) {
@@ -867,14 +868,11 @@ loadRdMacros <- function(file, macros = TRUE) {
     attr(Rd, "macros")
 }
 
-
-loadPkgRdMacros <- function(pkgdir, macros) {
-    others <- try(.read_description(file.path(pkgdir, "DESCRIPTION"))["RdMacros"], silent=TRUE)
-    if (inherits(others, "try-error"))
-    	others <- .read_description(file.path(pkgdir, "DESCRIPTION.in"))["RdMacros"]
-
-    if (!is.na(others)) {
-    	others <- trimws(unlist(strsplit(others, ",")))
+initialRdMacros <- function(pkglist = NULL,
+                            macros = file.path(R.home("share"), "Rd", "macros", "system.Rd") 
+                            ) {
+    if (length(pkglist)) {
+    	others <- trimws(unlist(strsplit(pkglist, ",")))
 
     	for (p in others) {
     	    if (dir.exists(system.file("help/macros", package = p)))
@@ -882,7 +880,23 @@ loadPkgRdMacros <- function(pkgdir, macros) {
     	    else
     	    	warning(gettextf("No Rd macros in package '%s'.", p), call. = FALSE)
         }
-    }
+    } else if (is.character(macros))
+    	macros <- loadRdMacros(file = macros)
+    macros
+}
+
+loadPkgRdMacros <- function(pkgdir, macros = NULL) {
+    pkglist <- try(.read_description(file.path(pkgdir, "DESCRIPTION"))["RdMacros"], silent=TRUE)
+    if (inherits(pkglist, "try-error"))
+    	pkglist <- .read_description(file.path(pkgdir, "DESCRIPTION.in"))["RdMacros"]
+    else
+        pkglist <- NULL
+
+    if (is.null(macros))
+        macros <- initialRdMacros(pkglist)
+    else
+        macros <- initialRdMacros(pkglist, macros)
+
     files <- c(list.files(file.path(pkgdir, "man", "macros"), pattern = "\\.Rd$", full.names = TRUE),
                list.files(file.path(pkgdir, "help", "macros"), pattern = "\\.Rd$", full.names = TRUE))
 
